{
    "name": "PlayerController",
    "maps": [
        {
            "name": "GamePlay",
            "id": "ada019cf-1f74-4959-841a-1ce87bd4955c",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "438460b4-9f1e-485f-9d17-f03872798b10",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "44b55ecc-d553-4431-a255-e7acc1a1c4a4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "e87450e2-e406-49d4-bb88-e5a3aa310ac6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Breath",
                    "type": "Button",
                    "id": "a06f2f2a-d291-4e67-b345-f450d2d54045",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TimeSlow",
                    "type": "Button",
                    "id": "b109dcee-d1f6-4d66-9e34-779c4ebfcdc7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "51bc8336-b055-49c2-95b1-781550db9be0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed7fcdb7-8cdc-4e32-a9bf-8c3b8de5fb10",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58e74985-1e29-4087-9137-9e73a892246c",
                    "path": "<HID::Logitech Logitech Dual Action>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d55c89c6-7e3a-4a78-acbf-c7fab8cf4cc2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3048e03c-de19-4eca-95ad-a48ecc350ac2",
                    "path": "<HID::Logitech Logitech Dual Action>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4de87b78-c471-4a63-8fbd-126a2e7a6299",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf8bd148-f279-4c3b-a38c-43daf56d2e7d",
                    "path": "<HID::Logitech Logitech Dual Action>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4998e2f-56c9-4d9a-bd9c-c795ee47bebb",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Breath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0493f43e-956a-4e83-944b-f4b44893d013",
                    "path": "<HID::Logitech Logitech Dual Action>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Breath",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9405ddb3-508a-4ba9-8d0c-ef6b6565fcf2",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSlow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a06ba6c-ef0c-4355-bf27-27d779405c8c",
                    "path": "<HID::Logitech Logitech Dual Action>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSlow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38cd8750-009e-457e-8cbe-7f44b5d7b658",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d597b20-a2fd-4d5e-b233-678e6ba0a604",
                    "path": "<HID::Logitech Logitech Dual Action>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}